Revert "[Feat] 마이페이지 API 구현(개인정보, 자동알람)"
This reverts commit 523bc8a3fdae926d7e5b43e3f098f93510532cef.
